--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>kr.codesquad</groupId>
-	<artifactId>java-bowling</artifactId>
+	<artifactId>java-bowling-javajigi</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
