--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,6 @@
 			<version>2.6.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.21</version>
-		</dependency>
-		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-template-handlebars</artifactId>
 			<version>2.5.5</version>
@@ -39,6 +34,18 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.2.3</version>
+<!-- 		    <scope>test</scope> 테스트 코드에만 적용하는 것-->
+ 		</dependency>	
+        <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
+         <version>3.8.0</version>
+         <scope>test</scope>
+       </dependency>		
 	</dependencies>
 	<build>
 		<plugins>
