make firstShot, secondShot method

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 .DS_Store
-/.settings/
-/bin/
-/.classpath
-/.project
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+/out/
 /target/
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+bin/
 /.gradle/
+*.iml
+/.idea
+*.xml
